# mlflow-classification-pipeline

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_experiments.py
.github/workflows/: ci.yml
src/: data_processor.py  inference_api.py  model_trainer.py
tests/: conftest.py  test_api.py
